<resources>
    <string name="app_name">MYOSA</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="event">New Event</string>
    <string name="Myosa_intro">MYOSA (Make Your Own Sensors Applications) is a plug-and-play, multipurpose, multi-sensor system for learning and developing sensor based applications. The entire system of MYOSA is like a lego set. All the components of this system are in the form of ‘blocks’ and can simply be plugged into each other. Various blocks include multiple sensors, actuators and an OLED display that shows the sensor readings. This ‘plug and chug’ feature provides the users with ready-to-apply connections of all the necessary components with the motherboard. One doesn’t have to worry about tons of wires and can directly jump to developing creative applications!  The motherboard of MYOSA is an Arduino derived opensource board.  The motherboard also has a Bluetooth module through which the output data gets transferred to the MYOSA mobile app. Thus, MYOSA is a complete package for getting introduced to the world of sensors and creating wonderful real life applications!</string>
    <string name="homeapp">The MYOSA mobile application has been developed with an aim to bridge the gap between the entire MYOSA system and the user. The user can simply download the mobile app and get connected to his/her own project developed using the MYOSA hardware and firmware. The connection takes place via bluetooth. Once connected, the app provides a great interface for extending the usability of the sensor based project.</string>
    <string name="ttlmb">MYOSA Motherboard</string>
    <string name="motherboard">The MYOSA Motherboard is an Arduino derived, open-source, controller board. The board is designed for reading inputs from the MYOSA Sensor boards as well as non-MYOSA inputs, communicate with the MYOSA Mobile App via Bluetooth, has Wifi connection and produces output with the help of MYOSA Actuators as well as other output objects. The ATmega2560 microcontroller of MYOSA enables you to create complex projects with no setup required using MYOSA Firmware and 54 digital I/O pins. You can also edit the MYOSA Firmware code or write your own code for connecting extra inputs and outputs. So connect the MYOSA Sensor boards and play with the outputs to actualize your creativity! </string>
    <string name="ttlsb">MYOSA Sensorboards</string>>
    <string name="sensorboard">MYOSA Sensorboards are the part of MYOSA Plug-n-Play concept, which on simply connecting to the MYOSA Motherboard will start reading the inputs from the Sensorboard and display it on the OLED. This relieves you from all the toil of connecting jumper wires, writing the code to get the readings, setting it up and all the mess. The readings will also be immediately displayed on the MYOSA Mobile App in the form of graphs if it is connected with the MYOSA Motherboard. You can also connect sensors and inputs which aren’t a part of MYOSA Kit simply like you connect it to other boards in the market.</string>
    <string name="ttlact">MYOSA Actuators</string>
    <string name="actuators">In the simplest language possible, actuators can be considered as a system output. Like sensors are the input, actuators convert energy from one form to another, which is the desired one. MYOSA Actuator-board is powered by Texas instrument chip PCA9536. It takes its power from a 3.3V coin cell. The actuators are isolated with PC817 Sharp optocoupler. It provides mechanical or electrical response according to the input sensed by the sensors and processed by the MYOSA Motherboard. It completes your system or application by giving it an action or response required as per different inputs.</string>
    <string name="ttlwl">Wireless Connectivity</string>
    <string name="btname">Onboard Bluetooth v2.0 (HC-05):</string>
    <string name="btdes">The bluetooth module provides a bridge between the MYOSA hardware and the mobile application. The sensor values are transmitted from the hardware to mobile app periodically via bluetooth.</string>
    <string name="wifiname">Plug and Play WiFi (ESP8266-12E):</string>
    <string name="wifides">WiFi facilitates wireless communication and data transfer among MYOSA motherboard and sensors, within the sensors, and over the cloud storage. The sensor values can be transmitted among all these mediums as needed. The WiFi module is in the form of a daughter board which can simple be plugged into the MYOSA motherboard.</string>
    <string name="ttlfw">The Firmware</string>
    <string name="firmware">The firmware, that is the code of the entire MYOSA system has been made open source. The code is completely modifiable and customizable as per your own project’s requirements! Other then the sensor/actuator blocks provided in the kit, the required additional components can also be attached to the digital I/O pins of the motherboard and, the firmware can be changed accordingly. Tweak the code as you like and create tons of sensor applications!</string>
    <string name="packaging">The MYOSA kit has been packaged with the intention of making it attractive to use. The controller board and sensors are housed in 3D-printed semi-transparent boxes. They have been designed and printed by our own team at the Smart City Lab of DA-IICT, India. The top covers are made of transparent acrylic sheets. Different shades of translucent colours make the MYOSA Boards attractive to use. Slots for connections have been made in these housing design for hassle-free plug-and-play action. They provide 360-degree rotation at the connections. The entire design and packaging of MYOSA is very robust and provides great ease of access.</string>
    <string name="title_paired_devices">Paired device</string>
    <string name="title_other_devices">Other device</string>
    <string name="button_scan">Scan</string>
    <string name="send">Send</string>
    <string name="connect">Connect a device</string>
    <string name="discoverable">Discoverable</string>
    <string name="not_connected">Not connected</string>
    <string name="bt_not_enabled_leaving">Not enabled</string>
    <string name="select_device">Selected device</string>
    <string name="none_found">None found</string>
    <string name="scanning">Scanning</string>
    <string name="none_paired">None paired</string>
    <string name="TitleName">MYOSA</string>
    <string name="set">Set</string>
    <string name="sensor_name">Sensor Name</string>
    <string name="sensor_councile">Sensor Councile</string>
    <string name="title_activity_infopage">Infopage</string>
    <string name="tab_text_1">Home</string>
    <string name="tab_text_2">Features</string>
    <string name="tab_text_3">How to Use</string>
    <string name="bButton">Find Device</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="export_to_csv">Export to CSV</string>
    <string name="myosa">MYOSA</string>
    <string name="themobileapp">The Mobile Application:</string>
    <string name="homepack">Packaging:</string>
    <string name="homemoti">Motivation:</string>
    <string name="motivatontext">Learning is always fruitful when one experiments. The curriculum of pre-university students does not include sensors. So far it might have been thought too early for them to introduce it. If they are asked to build a sensor based application, these students might run away just from the sheer mess of soldering wires, coding, ordering the right sensors, etc. Also, with the advent of IoT and dream of Smart Cities, sensors have become an integral part of applications and research just like basic resistors and capacitors. With sensors gaining such an immense importance in ample of technological advancements, it is desirable for the pre-university students to get introduced to the world of sensors. Such introduction to sensors, at the pre-university stage would kindle a curiosity among the students to explore more and contribute in the future advancements. With a motivation to make this learning process playful, without any burden or complexity, we have designed and developed the MYOSA board. We also have developed some basic experiments around this board such that the students or programmers can use it without wasting their efforts and time behind basic sensor coding and operations. It gives a hands-on experience to the users and the suggested projects provoke thought process. One can also design one’s own circuits and applications using sensors.</string>
    <!--how to use-->
    <string name="ttlread">Access to sensor readings</string>
    <string name="readings">The mobile app periodically fetches the readings and outputs of the sensors connected to the MYOSA motherboard. The data observed on the OLED display is uploaded to the app via Bluetooth module and updated from time to time. The graphs of the readings of each sensors are also plotted. The user can study the changing trends of the sensor values using these graphs. Thus, the app provides a very handy and easy access to the sensors data.</string>
    <string name="ttlevent">Event creation</string>
    <string name="eventcreation">The mobile app provides a very interesting feature of ‘event creation’ to visualize and manage the behavior of one’s  MYOSA project in particular situations. This feature allows the user to create an event using all/some of the connected sensors. The range of readings can be set for the selected sensors. If the value of those particular sensors violate the range, then the appropriate actuators will be triggered. For example, if the event is ‘Fire detection and alarm’, then the user can set the thresholds for the air quality sensor (for smoke detection), luminosity sensor and the temperature sensor accordingly. If the values of these sensors exceed the thresholds, then the buzzer (actuator) will be triggered. Thus the user can be made aware whenever a fire outbreak occurs! At a time, 3 simultaneous events can be created. Many more useful events can be thought of and implemented via this feature.</string>
    <string name="ttldb">Availability of local database</string>
    <string name="db">The values of all the connected sensors are backed up in an excel sheet which will be stored in the internal storage of the mobile on which the app is downloaded. This data can be stored and used in future if needed. The trend analysis can also be done using the sensor values captured over a specific period of time.</string>
</resources>
