<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <TextView
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:id="@+id/title_paired_devices"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/title_paired_devices" />

    <ListView
        android:id="@+id/paired_devices"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/pairText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/none_paired"
        android:textSize="14sp"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingRight="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:textSize="16sp"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="Found Devices"/>

        <ProgressBar
            style="?android:attr/progressBarStyle"
            android:id="@+id/progScan"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:visibility="gone"/>
    </LinearLayout>

    <ListView
        android:id="@+id/new_devices"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" />

    <TextView
        android:id="@+id/foundText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/none_found"
        android:visibility="gone"/>

</LinearLayout>